--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  [type="submit"] {
+    margin-right: 1rem;
+  }
 }
 
 .swim-lanes {
